# thesis

./: README.md  scenario_c_fusion_eval.py  sound_detection_eval_b1_b2.py
Evaluating_scripts/: scenario_d_decision_logic_eval.py  scenario_e_action_layer_eval.py  scenario_f_runtime_observer.sh
Results/scenario_c_fusion_eval_results/: scenario_c_fusion_eval.csv
Results/scenario_e_action_eval_results/: scenario_e_action_layer_eval.csv
Results/scenario_f_runtime_eval_results/: f1_node_info_decision_node.txt  f1_node_info_sound_presence_detector_node.txt  f1_topic_info_decision_reason.txt  (+14 more)
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  ros_entrypoint.sh
scenario_d_decision_eval_results/: scenario_d_decision_logic_eval.csv
scenario_f_runtime_eval_results/: f1_expected_node_availability.csv  f1_node_info_fake_audio_source_node.txt  f1_node_info_fake_image_source_node.txt  f1_node_info_vision_detector_node.txt  f1_node_list.txt  f1_topic_info_camera_image_raw.txt  f1_topic_info_sound_audio.txt  f1_topic_info_vision_confidence.txt  f1_topic_list.txt  f2_hz_camera_image_raw.txt  f2_hz_decision_state.txt  f2_hz_decision_warning.txt  f2_hz_sound_detected.txt  f2_hz_vision_confidence.txt  f2_hz_vision_detected.txt  f3_resource_metadata.txt  scenario_f_README.txt
sound_detection_eval_results/: B1_uav_like_sound_present.csv  B2_background_noise_only.csv
thesis_ws/src/decision_layer/: package.xml  setup.py
thesis_ws/src/decision_layer/config/: decision_node.yaml
thesis_ws/src/decision_layer/launch/: threat_response_demo.launch.py
(+54 files in other folders)
